# race-simulator

./: README
race-simulator-lib/: AirTransport.cpp  AirTransport.h  Boots.cpp  Boots.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Export.h  FastCamel.cpp  FastCamel.h  FlyingCarpet.cpp  FlyingCarpet.h  Functions.cpp  Functions.h  GroundTransport.cpp  GroundTransport.h  MyLibrary.h  RaceSimulatorAPI.h  RaceSimulatorDynamicLib.vcxproj
race-simulator-main/: CMakeLists.txt  RaceSimulator.slnx  RaceSimulator.vcxproj  RaceSimulatorMain.cpp
